--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Hello first changes made to check
+<h1>Hello first changes made to check hello
 </h1>
 </body>
 </html>
